# gtest_worshop

./: .gitmodules  README.md
examples/: CMakeLists.txt
examples/src/: list.hpp
examples/test/: test_assertions.cpp  test_fixtures.cpp  test_mocks.cpp
project_gtest_by_cmake/: CMakeLists.txt  CMakeLists.txt.in
project_gtest_by_cmake/src/: list.hpp
project_prebuilt_gtest/: CMakeLists.txt
project_with_gtest/src/: list.hpp  main.cpp
project_with_gtest/test/: test_list.cpp
